--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vue": "^3.2.31"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.8",
     "@vitejs/plugin-vue": "^2.2.4",
     "@vue/compiler-sfc": "^3.2.31",
     "autoprefixer": "^10.4.2",
